objects/TW1_Terminal__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operador</label>
        <referenceTo>TW1_Operador__c</referenceTo>
        <relationshipLabel>Terminais</relationshipLabel>
        <relationshipName>Terminais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Terminais</relationshipLabel>
        <relationshipName>Terminais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Stand__c</fullName>
        <label>Stand</label>
        <referenceTo>TW1_Stand__c</referenceTo>
        <relationshipLabel>Terminais</relationshipLabel>
        <relationshipName>Terminais</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Terminal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Stand__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>Terminais_BAN</fullName>
        <columns>NAME</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Stand__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>BAN</value>
        </filters>
        <label>Terminais_BAN</label>
    </listViews>
    <listViews>
        <fullName>Terminais_BLD</fullName>
        <columns>NAME</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Stand__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>BLD</value>
        </filters>
        <label>Terminais_BLD</label>
    </listViews>
    <listViews>
        <fullName>Terminais_GOL</fullName>
        <columns>NAME</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Stand__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>GOL</value>
        </filters>
        <label>Terminais_GOL</label>
    </listViews>
    <listViews>
        <fullName>Terminais_NAT</fullName>
        <columns>NAME</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Stand__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>NAT</value>
        </filters>
        <label>Terminais_NAT</label>
    </listViews>
    <listViews>
        <fullName>Terminais_NSF</fullName>
        <columns>NAME</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Stand__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>NSF</value>
        </filters>
        <label>Terminais_NSF</label>
    </listViews>
    <listViews>
        <fullName>Terminais_PAN</fullName>
        <columns>NAME</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Stand__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>PAN</value>
        </filters>
        <label>Terminais_PAN</label>
    </listViews>
    <listViews>
        <fullName>Terminais_RDB</fullName>
        <columns>NAME</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Stand__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>RDB</value>
        </filters>
        <label>Terminais_RDB</label>
    </listViews>
    <listViews>
        <fullName>Terminais_SNI</fullName>
        <columns>NAME</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Stand__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>SNI</value>
        </filters>
        <label>Terminais_SNI</label>
    </listViews>
    <listViews>
        <fullName>Terminais_VSS</fullName>
        <columns>NAME</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Stand__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>VSS</value>
        </filters>
        <label>Terminais_VSS</label>
    </listViews>
    <nameField>
        <label>Nome do Terminal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terminais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>